updated README to explain covalent modelling

--- a/README
+++ b/README
@@ -9,7 +9,9 @@ README:
 
 This repo contains a computational chemistry project I programmed in C++. The included compchem.cpp file compiles to an example experiment of burning carbon in oxygen. One run of this experiment has been saved as a video file (example_burning_carbon.mp4, imaged in Paraview, paraview.org), in which carbon (red) is burning in oxygen (blue). The colour of the atoms reflects charge, and their size reflects their atomic weight. The simulation was highly realistic, spontaneously producing the correct reaction products. It mainly produced carbon dioxide, as expected for this reaction. However the simulation also produced the transient oxide carbon trioxide, which is unstable, and as shown in the simulation quickly decayed to carbon dioxide as soon as the appropriate atoms/molecules were available. The simulation also realistically produced the poisonous gas carbon monoxide, which is why we use rangehoods over gas stoves!
 
-One of the challenges of this project was accounting for repulsion between atoms at close distances, due to electron cloud overlap and the Pauli exclusion principle. Modelling this is necessary, as otherwise, dissimilar-charged ions will attract indefinitely, until they occupy the same space. I modelled Pauli repulsion using an exponential function, which allows electrostatic forces due to the Coulomb effect to dominate at distances greater than a chosen equilibrium bond length (the distance between the nuclei of two bonded atoms), and for Pauli repulsion to rapidly increase at distances shorter than this bond length. This allows for ions to move together and form an ionic bond, but remain realistically distinct. An alternate approach to this empirically-chosen equation might be to model the Lennard-Jones potential. Maybe another day!
+One of the challenges of this project was accounting for repulsion between atoms at close distances, due to electron cloud overlap and the Pauli exclusion principle. Modelling this is necessary, as otherwise, dissimilar-charged ions will attract indefinitely, until they occupy the same space. I modelled Pauli repulsion using an exponential function, which allows electrostatic forces due to the Coulomb effect to dominate at distances greater than a chosen equilibrium bond length (the distance between the nuclei of two bonded atoms), and for Pauli repulsion to rapidly increase at distances shorter than this bond length. This allows for atoms to move together and form a covalent bond (or for ions to move together and form an ionic bond, depending on the reactants), but remain realistically distinct. An alternate approach to this empirically-chosen equation might be to model the Lennard-Jones potential. Maybe another day!
+
+Note in order to model this covalent reaction, I used somewhat of a shortcut - initially modelling carbon and oxygen atoms as cations and anions respectively. I.e., the reaction constituatents were given an initial charge equal to that they would assume once covalently bonded. It is possible to model literal covalent bonds by modelling outer-shell electrons, but I did not use that method in this simulation.
 
 compile the program with
 make re
